--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-website",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,26 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
     "aos": "^2.3.4",
-    "daisyui": "^2.25.0",
-    "isomorphic-unfetch": "^3.1.0",
-    "next": "12.2.5",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
+    "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "swr": "^1.3.0"
+    "react-icons": "^4.6.0",
+    "typescript": "4.8.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
-  },
-  "description": "My website codes",
-  "keywords": [
-    "website"
-  ],
-  "author": "nullman",
-  "license": "MIT"
+    "@types/aos": "^3.0.4",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2"
+  }
 }
